Updates people categories.

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -183,7 +183,7 @@ people:
     - vashishtha_famus_2024
     - gantt_event_2024
     - barham_megawika_2023
-    description: Alex is a third-year undergraduate student in Computer Science. His current research focuses on information extraction and summarization. 
+    description: Alex is a first-year PhD student in Computer Science at Johns Hopkins University. While in the FACTS.lab, his research focused on information extraction and summarization. 
   pliu:
     name: Pinxin Liu
     website: null
