Updates title of mission statement.

--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -2,7 +2,7 @@ hero_section:
   title: "We are the <span style=\"color: #022F78;\">Formal and Computational Semantics lab</span> (FACTS.lab) at the University of Rochester."
 
 grey__section:
-  title: Mission
+  title: Aims
   text: |
     The human ability to convey information about possible past, present, and future configurations of things in the world is undergirded by systematic relationships between intricately structured linguistic expressions and the dizzying array of conceptual categories available to humans. The FACTS.lab investigates (a) which of these conceptual categories can be related to which sorts of linguistic expressions, (b) what those relationships look like, and (c) how they can be leveraged for building better natural language understanding (NLU) systems.
 
