Fixes typo and updates links.

--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -32,34 +32,32 @@ papers:
   - label: "pdf"
     href: "https://ling.auf.net/lingbuzz/008478/current.pdf"
   - label: "bib"
-    href: "grove_probibilistic_2024"
+    href: "grove_probabilistic_2024"
     save: "/assets/bibliography/grove_probabilistic_2024.bib"
     
 - citation: "bib"
   bib_key: "vashishtha_famus_2024"
   links:
   - label: "pdf"
-    href: "https://arxiv.org/pdf/2311.05601.pdf"
+    href: "https://aclanthology.org/2024.naacl-long.457.pdf"
   - label: "data"
     href: "https://github.com/FACTSlab/FAMuS"
   - label: "doi"
-    href: "https://doi.org/10.48550/arXiv.2311.05601"
+    href: "https://doi.org/10.18653/v1/2024.naacl-long.457"
   - label: "bib"
     href: "vashishtha_famus_2024"
-    save: "/assets/bibliography/vashishtha_famus_2024.bib"
+    save: "/bibliography/vashishtha_famus_2024.bib"
 
 - citation: "bib"
   bib_key: "gantt_multimuc_2024"    
   links:
   - label: "pdf"
-    href: "https://arxiv.org/pdf/2401.16209.pdf"
+    href: "https://aclanthology.org/2024.eacl-long.21.pdf"
   - label: "data"
     href: "https://github.com/wgantt/multimuc"
-  - label: "doi"
-    href: "https://doi.org/10.48550/arXiv.2401.16209"
   - label: "bib"
     href: "gantt_multimuc_2024"
-    save: "/assets/bibliography/gantt_multimuc_2024.bib"
+    save: "/bibliography/gantt_multimuc_2024.bib"
 
 - citation: "bib"
   bib_key: "gantt_event_2024"
