--- a/_data/research.yml
+++ b/_data/research.yml
@@ -41,9 +41,9 @@ lofi:
 
 pds:
   papers:
-  - grove_probabilistic_2024.bib
-  - grove_factivity_2024.bib
-  - grove_modeling_2024.bib
+  - grove_probabilistic_2024
+  - grove_factivity_2024
+  - grove_modeling_2024
 
 cdae: null
 ellipsis: null
