Adds Varad Thikekar profile.

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -12,12 +12,10 @@ people:
     - ellipsis
     - zulu
     - connotate
-    - pds
     papers:
     - cao_generating_2024
     - grove_factivity_2024
     - grove_modeling_2024
-    - grove_probabilistic_2024
     - gantt_event_2024
     - gantt_small_2024
     - vashishtha_famus_2024
@@ -72,7 +70,6 @@ people:
     - megaattitude
     - pds
     papers:
-    - grove_probabilistic_2024
     - grove_factivity_2024
     - grove_modeling_2024
     description: Julian is a post-doc in the FACTS.lab. He is interested in integrating Bayesian probabilistic models of inference with type-theoretic natural language semantics. He is also interested in characterizing dynamic semantic phenomena, such as presupposition, by relying on theories of effects, and determining how those characterizations should be combined with one another. 
@@ -234,6 +231,14 @@ people:
     - connotate
     papers: null
     description: Arsal is currently a software engineer at Everlaw. While in the FACTS.lab, he developed a fully-featured web-based annotation tools for natural language processing as part of Connotate. 
+  vthikekar:
+    name: Varad Thikekar
+    website: null
+    image: /assets/images/people/varad-thikekar.jpg
+    projects:
+    - decomp
+    papers: null
+    description: Varad Thikekar is a second-year master's student in Computer Science. His current research focuses on natural language processing, healthcare analytics, and data science.
   cnair:
     name: Chandrashekar Nair
     website: https://www.linkedin.com/in/chandrashekar-nair-47a034179/
